# rag-research-chatbot

./: LICENSE  README.md  pyproject.toml
scripts/: download_papers.py
search_terms/: anatomy.txt
src/u_ok_luv/vec_db_refresh/: download_papers.py  encode_search_terms.py
src/u_ok_luv/vec_db_refresh/search_terms/: anatomy.txt  contraception.txt  disease.txt  female.txt  menopause.txt  menstrual.txt  pregnancy.txt  products.txt
